quarkus/PidpAdapter/target/kubernetes/kubernetes.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: a17f1928472c7b7a72c27a76c3292b94abec8529
    app.quarkus.io/build-timestamp: 2023-06-15 - 22:42:32 +0000
  labels:
    app.kubernetes.io/name: quarkus-pidp-adapter
    app.kubernetes.io/version: 1.0-SNAPSHOT
  name: quarkus-pidp-adapter
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: quarkus-pidp-adapter
      app.kubernetes.io/version: 1.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: a17f1928472c7b7a72c27a76c3292b94abec8529
        app.quarkus.io/build-timestamp: 2023-06-15 - 22:42:32 +0000
      labels:
        app.kubernetes.io/name: quarkus-pidp-adapter
        app.kubernetes.io/version: 1.0-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: JAVA_APP_JAR
              value: /deployments/quarkus-run.jar
            - name: JAVA_OPTIONS
              value: ""
          image: vicgu/quarkus-pidp-adapter:1.0-SNAPSHOT
          imagePullPolicy: Always
          name: quarkus-pidp-adapter
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
      volumes:
        - name: app-secrets
          secret:
            defaultMode: 384
            optional: false
            secretName: ccm-secrets
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: a17f1928472c7b7a72c27a76c3292b94abec8529
    app.quarkus.io/build-timestamp: 2023-06-15 - 22:42:32 +0000
  labels:
    app.kubernetes.io/name: quarkus-pidp-adapter
    app.kubernetes.io/version: 1.0-SNAPSHOT
  name: quarkus-pidp-adapter
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: quarkus-pidp-adapter
    app.kubernetes.io/version: 1.0-SNAPSHOT
  type: ClusterIP
